# Whizzy

./: .gitignore  README.md  pyproject.toml
arduino_interface/: interface.py
chief_comms_officer/: cco.py
chief_comms_officer/static/: hud.css
chief_comms_officer/templates/: control.html  home.html
webserver/: test.py  toggle_day_night.py  webserver.py
webserver/static/: hud.css  style.css
webserver/templates/: login.html
