[project]
name = "rc-car-controls"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "flask>=3.1.2",
    "flask-bcrypt>=1.0.1",
    "opencv-python>=4.12.0.88",
    "psutil>=7.0.0",
    "pyserial>=3.5",
]
